@@ -1,3 +1,11 @@
+1998-09-26  Joshua Pritikin  <joshua.pritikin@db.com>
+
+	* Check binary API version at run-time.
+
+1998-09-10  Joshua Pritikin  <joshua.pritikin@db.com>
+
+	* Fixed index logic that was writing in read-only situations.
+
 1998-09-08  Joshua Pritikin  <joshua.pritikin@db.com>
 
 	* os_class method declaration is now optional.
